--- a/gestion/templates/gestion/lista_vuelos.html
+++ b/gestion/templates/gestion/lista_vuelos.html
@@ -7,7 +7,10 @@
     <h1>Lista de Vuelos</h1>
     <ul>
         {% for vuelo in vuelos %}
-            <li><a href="{% url 'detalle_vuelo' vuelo.id %}">{{ vuelo.origen }} a {{ vuelo.destino }} - {{ vuelo.fecha_salida }}</a></li>
+            <li>
+                <a href="{% url 'detalle_vuelo' vuelo.id %}">{{ vuelo.origen }} a {{ vuelo.destino }} - {{ vuelo.fecha_salida }}</a>
+                - <a href="{% url 'reporte_pasajeros_por_vuelo' vuelo.id %}">Ver Reporte</a>
+            </li>
         {% endfor %}
     </ul>
 </body>
