Implementadas validaciones y corregidos errores de autenticación

--- a/gestion/templates/gestion/base.html
+++ b/gestion/templates/gestion/base.html
@@ -35,6 +35,7 @@
             </form>
         {% else %}
             <a href="{% url 'login' %}">Login</a>
+            <a href="{% url 'crear_pasajero' %}">Registrarse</a>
         {% endif %}
     </div>
 
