--- a/EFI/gestion/templates/gestion/base.html
+++ b/EFI/gestion/templates/gestion/base.html
@@ -1,9 +1,8 @@
-{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
     <title>{% block title %}Aerolínea{% endblock %}</title>
-    <link href="{% static 'gestion/css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -42,12 +41,10 @@
         </div>
     </nav>
 
-    <div class="container d-flex justify-content-center align-items-center" style="min-height: 80vh;">
-        <div class="col-md-6">
-            {% block content %}{% endblock %}
-        </div>
+    <div class="container mt-4">
+        {% block content %}{% endblock %}
     </div>
 
-    <script src="{% static 'gestion/js/bootstrap.bundle.min.js' %}"></>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
