--- a/gestion/templates/gestion/crear_pasajero.html
+++ b/gestion/templates/gestion/crear_pasajero.html
@@ -1,21 +1,19 @@
 {% extends 'gestion/base.html' %}
+{% load crispy_forms_tags %}
 
 {% block title %}Crear Pasajero{% endblock %}
 
 {% block content %}
-    <h2>Crear Pasajero</h2>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Crear</button>
-    </form>
-
-    <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            var inputs = document.querySelectorAll('input, select, textarea');
-            for (var i = 0; i < inputs.length; i++) {
-                inputs[i].setAttribute('required', '');
-            }
-        });
-    </script>
+    <div class="card">
+        <div class="card-header">
+            <h2>Registrarse</h2>
+        </div>
+        <div class="card-body">
+            <form method="post">
+                {% csrf_token %}
+                {{ form|crispy }}
+                <button type="submit" class="btn btn-primary">Crear</button>
+            </form>
+        </div>
+    </div>
 {% endblock %}
