Agregados datos de ejemplo y modularizados los estilos

--- a/gestion/templates/gestion/base.html
+++ b/gestion/templates/gestion/base.html
@@ -4,6 +4,7 @@
 <head>
     <title>{% block title %}Aerolínea{% endblock %}</title>
     <link href="{% static 'gestion/css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'gestion/css/styles.css' %}" rel="stylesheet">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
