--- a/gestion/templates/gestion/login.html
+++ b/gestion/templates/gestion/login.html
@@ -1,18 +1,19 @@
 {% extends 'gestion/base.html' %}
 {% load crispy_forms_tags %}
+{% load i18n %}
 
-{% block title %}Login{% endblock %}
+{% block title %}{% trans "Login" %}{% endblock %}
 
 {% block content %}
     <div class="card">
         <div class="card-header">
-            <h2>Login</h2>
+            <h2>{% trans "Login" %}</h2>
         </div>
         <div class="card-body">
             <form method="post">
                 {% csrf_token %}
                 {{ form|crispy }}
-                <button type="submit" class="btn btn-primary">Login</button>
+                <button type="submit" class="btn btn-primary">{% trans "Login" %}</button>
             </form>
         </div>
     </div>
