--- a/gestion/templates/gestion/base.html
+++ b/gestion/templates/gestion/base.html
@@ -23,6 +23,12 @@
                 <ul class="navbar-nav ms-auto">
                     {% if user.is_authenticated %}
                         <li class="nav-item">
+                            <a class="nav-link" href="{% url 'user_profile' %}">{% trans "Profile" %}</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'notifications' %}">{% trans "Notifications" %}</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="{% url 'admin:index' %}">{% trans "Admin" %}</a>
                         </li>
                         <li class="nav-item">
