--- a/gestion/templates/gestion/flight_list.html
+++ b/gestion/templates/gestion/flight_list.html
@@ -5,6 +5,24 @@
 
 {% block content %}
     <h1 class="text-center mb-4">{% trans "Flight List" %}</h1>
+
+    <form method="get" class="mb-4">
+        <div class="row g-3">
+            <div class="col-md-3">
+                <input type="text" name="origin" class="form-control" placeholder="{% trans "Origin" %}" value="{{ request.GET.origin }}">
+            </div>
+            <div class="col-md-3">
+                <input type="text" name="destination" class="form-control" placeholder="{% trans "Destination" %}" value="{{ request.GET.destination }}">
+            </div>
+            <div class="col-md-3">
+                <input type="date" name="departure_date" class="form-control" placeholder="{% trans "Departure Date" %}" value="{{ request.GET.departure_date }}">
+            </div>
+            <div class="col-md-3">
+                <button type="submit" class="btn btn-primary w-100">{% trans "Search" %}</button>
+            </div>
+        </div>
+    </form>
+
     <div class="row">
         {% for flight in flights %}
             <div class="col-md-4 mb-4">
@@ -24,6 +42,10 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        {% empty %}
+            <div class="col-12">
+                <p class="text-center">{% trans "No flights found matching your criteria." %}</p>
             </div>
         {% endfor %}
     </div>
