--- a/gestion/templates/gestion/passenger_report.html
+++ b/gestion/templates/gestion/passenger_report.html
@@ -1,7 +1,7 @@
 {% extends 'gestion/base.html' %}
 {% load i18n %}
 
-{% block title %{% trans "Passenger Report" %}{% endblock %}
+{% block title %}{% trans "Passenger Report" %}{% endblock %}
 
 {% block content %}
     <div class="card">
