--- a/gestion/templates/gestion/flight_detail.html
+++ b/gestion/templates/gestion/flight_detail.html
@@ -14,13 +14,11 @@
     <div class="d-flex flex-wrap">
         {% for seat in seats %}
             {% if seat.status == 'available' %}
-                <a href="{% url 'book_seat' seat.id %}" class="text-decoration-none">
-                    <div class="seat available">
-                        {{ seat.number }}
-                    </div>
+                <a href="{% url 'book_seat' seat.id %}" class="seat available text-decoration-none">
+                    {{ seat.number }}
                 </a>
             {% else %}
-                <div class="seat {{ seat.status }}" style="pointer-events: none; cursor: default;">
+                <div class="seat {{ seat.status }}">
                     {{ seat.number }}
                 </div>
             {% endif %}
