--- a/gestion/templates/gestion/base.html
+++ b/gestion/templates/gestion/base.html
@@ -62,9 +62,11 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'notifications' %}">{% trans "Notifications" %}</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'admin:index' %}">{% trans "Admin" %}</a>
-                        </li>
+                        {% if user.is_staff %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'admin:index' %}">{% trans "Admin" %}</a>
+                            </li>
+                        {% endif %}
                         <li class="nav-item">
                             <form action="{% url 'logout' %}" method="post" class="d-flex">
                                 {% csrf_token %}
