--- a/gestion/templates/gestion/book_seat.html
+++ b/gestion/templates/gestion/book_seat.html
@@ -13,6 +13,7 @@
             <form method="post" action="{% url 'book_seat' seat_id %}">
                 {% csrf_token %}
                 <button type="submit" class="btn btn-primary">{% trans "Confirm and Proceed to Payment" %}</button>
+                <a href="{% url 'flight_list' %}" class="btn btn-secondary">{% trans "Cancel" %}</a>
             </form>
         </div>
     </div>
