--- a/gestion/templates/gestion/login.html
+++ b/gestion/templates/gestion/login.html
@@ -5,16 +5,22 @@
 {% block title %}{% trans "Login" %}{% endblock %}
 
 {% block content %}
-    <div class="card">
-        <div class="card-header">
-            <h2>{% trans "Login" %}</h2>
-        </div>
-        <div class="card-body">
-            <form method="post">
+<div class="row justify-content-center">
+    <div class="col-md-6">
+        <div class="card shadow-lg">
+            <div class="card-body p-5">
+                <h2 class="card-title text-center mb-4">{% trans "Login" %}</h2>
+                <form method="post">
                 {% csrf_token %}
                 {{ form|crispy }}
-                <button type="submit" class="btn btn-primary">{% trans "Login" %}</button>
+                <div class="d-grid">
+                    <button type="submit" class="btn btn-primary btn-lg">{% trans "Login" %}</button>
+                </div>
             </form>
+            <div class="text-center mt-3">
+                <a href="{% url 'create_passenger' %}">{% trans "Don't have an account? Register" %}</a>
+            </div>
         </div>
     </div>
+</div>
 {% endblock %}
