--- a/airline/templates/airline/base.html
+++ b/airline/templates/airline/base.html
@@ -22,6 +22,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'flight_list' %}">Manage Flights</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'passenger_list' %}">Manage Passengers</a>
+                    </li>
                     {% endif %}
                 </ul>
                 <ul class="navbar-nav">
