--- a/airline/templates/airline/base.html
+++ b/airline/templates/airline/base.html
@@ -25,6 +25,12 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'passenger_list' %}">Manage Passengers</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'flight_list' %}">View Flights (with seats)</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'reservation_list' %}">Manage Reservations</a>
+                    </li>
                     {% endif %}
                 </ul>
                 <ul class="navbar-nav">
