--- a/airline/templates/airline/flight_form.html
+++ b/airline/templates/airline/flight_form.html
@@ -3,11 +3,37 @@
 {% block content %}
 <div class="container">
     <h1 class="my-4">{{ action }} Flight</h1>
-    <form method="post">
+    <form method="post" class="box">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="btn btn-primary">{{ action }}</button>
-        <a href="{% url 'flight_list' %}" class="btn btn-secondary">Cancel</a>
+        {% if form.non_field_errors %}
+            <div class="notification is-danger">
+                {% for error in form.non_field_errors %}
+                    <p>{{ error }}</p>
+                {% endfor %}
+            </div>
+        {% endif %}
+        {% for field in form %}
+            <div class="field">
+                <label class="label">{{ field.label }}</label>
+                <div class="control">
+                    {{ field }}
+                </div>
+                {% if field.help_text %}
+                    <p class="help">{{ field.help_text }}</p>
+                {% endif %}
+                {% for error in field.errors %}
+                    <p class="help is-danger">{{ error }}</p>
+                {% endfor %}
+            </div>
+        {% endfor %}
+        <div class="field is-grouped">
+            <div class="control">
+                <button type="submit" class="button is-primary">Save</button>
+            </div>
+            <div class="control">
+                <a href="{% url 'flight_list' %}" class="button is-link is-light">Cancel</a>
+            </div>
+        </div>
     </form>
 </div>
 {% endblock %}
