--- a/airline/templates/airline/passenger_form.html
+++ b/airline/templates/airline/passenger_form.html
@@ -2,10 +2,36 @@
 
 {% block content %}
 <h1 class="mb-4">{{ action }} Passenger</h1>
-<form method="post">
+<form method="post" class="box">
     {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit" class="btn btn-primary">Save</button>
-    <a href="{% url 'passenger_list' %}" class="btn btn-secondary">Cancel</a>
+    {% if form.non_field_errors %}
+        <div class="notification is-danger">
+            {% for error in form.non_field_errors %}
+                <p>{{ error }}</p>
+            {% endfor %}
+        </div>
+    {% endif %}
+    {% for field in form %}
+        <div class="field">
+            <label class="label">{{ field.label }}</label>
+            <div class="control">
+                {{ field }}
+            </div>
+            {% if field.help_text %}
+                <p class="help">{{ field.help_text }}</p>
+            {% endif %}
+            {% for error in field.errors %}
+                <p class="help is-danger">{{ error }}</p>
+            {% endfor %}
+        </div>
+    {% endfor %}
+    <div class="field is-grouped">
+        <div class="control">
+            <button type="submit" class="button is-primary">Save</button>
+        </div>
+        <div class="control">
+            <a href="{% url 'passenger_list' %}" class="button is-link is-light">Cancel</a>
+        </div>
+    </div>
 </form>
 {% endblock %}
